@@ -250,6 +250,9 @@
 
       \item \code{confint(<multivariate lm()>)} now works correctly;
       reported on R-devel by Steven Pav.
+
+      \item \code{quade.test()} now also works correctly when its
+      arguments are not yet sorted along \code{groups}, fixing \PR{15842}.
     }
   }
 }
